# library2

./: .gitmodules  CMakeLists.txt
src/: Hello.cpp
src/library1/: Hello.h
src/library2/: Hello.h
tests/: CMakeLists.txt  Hello_tests.cpp
